Upload de imagem feito

--- a/API_Jogame.csproj
+++ b/API_Jogame.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Scripts\" />
+    <Folder Include="wwwRoot\upload\imagens\" />
   </ItemGroup>
 
   <ItemGroup>
